--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "sequelize": "^6.25.2",
-    "sqlite3": "^5.1.2"
+    "sequelize": "^6.25.2"
   },
   "scripts": {
     "start": "node server.js"
